# Diffusion-Trajectory-Forecaster

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  create_dataset.py  main.py  metrics.txt  pyproject.toml  train.py  tune_optuna.py  visualise_data.py
.dvc/: config
data/: .gitignore  baseline1.dvc  big_baseline.dvc  debug.dvc  processed_v1.dvc  processed_v2.dvc  small_base_v2_no_scenes.dvc  small_base_wo_vis.dvc  test_processed_v1.pkl.dvc  train_processed_v1.pkl.dvc  val_processed_v1.pkl.dvc
data/dataset/train/: states_0.pkl
data/dataset/val/: states.pkl
scripts/: add_local_dataset_to_dvc.sh  create_dataset.py  docker_run.sh  setup_dvc_remote.sh
src/: metrics.py
src/configs/: big_baseline.yaml  create_dataset.yaml  ddpm_1.yaml  ddpm_attn.yaml  ddpm_baseline.yaml  tune_optuna.yaml  visualize.yaml
src/configs/architectures/: TinyDenoiser.yaml
src/configs/data/: baseline1.yaml  big_baseline.yaml  processed_v1.yaml  processed_v2.yaml  (+2 more)
src/data_module/: __init__.py  data_module.py  data_process.py  dataset.py  dataset_creation.py  sampler.py  scenario.py  visualize.py  wb_dataset.py
src/diffusion_samplers/: ddpm.py
src/loggers/: __init__.py  clearml_logger.py  profiler.py
src/losses/: __init__.py  mse_loss.py  mse_loss_xy.py
src/metrics/: __init__.py  ade.py  all_metrics.py  avg.py  base.py  fde.py  tracker.py
src/models/: __init__.py  base_model.py  base_model_debug.py  base_model_debuggable.py  base_model_eval.py  base_model_oracle.py  base_model_proxy.py  base_model_stats.py  diff_attn.py  diff_linear.py  diff_model.py  modules.py  one_layer.py
src/trainers/: __init__.py  base_trainer.py  base_trainer_debug.py  base_trainer_profiler.py
src/utils/: __init__.py  callbacks.py  checkpoints.py  data_utils.py  debug.py  eval.py  logging.py  oracle.py  plots.py  process_param.py  proxy.py  stats.py
src/visualization/: color.py  plotting.py  utils.py  vis.py  vis_config_bright.py  viz.py
tests/: test_metrics_losses.py  test_mocked_model.py  test_sampling_oracle.py
wandb/wandb/: latest-run
(+88 files in other folders)
