[project]
name = "diffusion-trajectory-forecaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.48.0",
    "hydra-core>=1.3.2",
    "jax>=0.9.0.1",
    "jaxlib>=0.9.0.1",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "pre-commit>=4.5.1",
    "torch>=2.10.0",
    "waymo-waymax",
]

[tool.uv.sources]
waymo-waymax = { git = "https://github.com/waymo-research/waymax.git", rev = "main" }
